Update Task 2 (TSF).ipynb

--- a/Task 2 (TSF).ipynb
+++ b/Task 2 (TSF).ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Linear Regression is a supervised machine learning algorithm where the predicted output is continuous and has a constant slope. It's used to predict values within a continuous range, rather than trying to classify them into categories."
+    "Linear Regression is a supervised machine learning algorithm where the predicted output is continuous and has a constant slope. It's used to predict values within a continuous range, rather than trying to classify them into categories. Linear regression is perhaps one of the most well known and well understood algorithms in statistics and machine learning."
    ]
   },
   {
